# LogIQ

./: .gitignore  LICENSE  README.md
aiagent/: .gitignore  CHANGELOG.md  CLI_DASHBOARD_INTEGRATION.md  CLI_USER_GUIDE.md  MANIFEST.in  PYPI_UPLOAD_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md  RELEASE_SUMMARY_v1.5.0.md  RELEASE_SUMMARY_v1.6.0.md  RELEASE_SUMMARY_v1.7.0.md  __init__.py  cli_tool.py  command.txt  monitoring_demo.py  setup.py  setup_automated_monitoring.py  test_cli.py  test_cli_dashboard_integration.py
aiagent/Scripts/: README_THREAT_DETECTION.md  accurate_test_robustness.py  analyze_confidence.py  confidence_classifier.py  improved_threat_trainer.py  (+7 more)
client/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
server/: .gitignore  config.py  db.py  main.py  pyproject.toml  requirements.txt
server/Scripts/: classify_logs.py  cost_sensitive_evaluator.py  cost_sensitive_trainer.py  enhanced_threat_model.py  json_to_csv.py  prerag_classifier.py  run_cost_sensitive_training.py  test_trained_model.py  verify_test_accuracy.py
server/core/: config.py  orchestrator.py  security.py
server/data/: kev_processed.csv  kev_raw.json
server/model/: __init__.py  analysis_model.py  users.py
server/routers/: analysis.py  auth.py  mitre.py  monitoring.py  users.py
server/services/: __init__.py  aiclient.py  analysis_storage_service.py  chromadb_service.py  data_prepping.py  encryption_service.py  gemini_service.py  mitre_validation_service.py
(+35 files in other folders)
