[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.40.19",
    "fastapi[all]>=0.116.1",
    "ibm-watsonx-ai>=1.3.36",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.35.0",
    "google-generativeai",
    "sentence-transformers",
    "chromadb>=1.0.20",
    "cryptography>=45.0.6",
    "schedule>=1.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.5",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "imblearn>=0.0",
]
